@@ -3,3 +3,5 @@ v_7_10
 
 v_3_03
 - Added capabilities for using phase modulator
+-- v2
+-- fix comport selection (still manual for debugging)
